Support for column aliases (#219)